--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "tsc --skipLibCheck",
+    "build:strict": "tsc",
     "clean": "rm -rf dist",
     "tunnel": "ngrok http 3001"
   },
@@ -23,6 +24,12 @@
   "dependencies": {
     "@huggingface/inference": "^4.0.6",
     "@langchain/community": "^0.3.47",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.12.7",
+    "@types/node-fetch": "^2.6.11",
     "@types/twilio": "^3.19.2",
     "axios": "^1.10.0",
     "body-parser": "^1.20.2",
@@ -37,19 +44,13 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
     "twilio": "^5.0.4",
+    "typescript": "^5.4.5",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.12.7",
-    "@types/node-fetch": "^2.6.11",
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2"
   }
 }
