--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
+    "groq-sdk": "^0.25.0",
     "gtts": "^0.2.1",
     "helmet": "^7.1.0",
     "langchain": "^0.3.29",
