--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
+    "resend": "^4.6.0",
     "twilio": "^5.0.4",
     "typescript": "^5.4.5",
     "uuid": "^11.1.0",
